--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#08AEEA"
-                android:endColor="#2AF598"
+                android:startColor="#001E53"
+                android:endColor="#3BBAB0"
                 android:type="linear"
                 />
         </shape>
