--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 
 
     <color name="colorAccentOne">#ED4265</color>
-    <color name="colorAccentTwo">#3BBAB0</color>
+    <color name="colorAccentTwo">#27BE8C</color>
     <color name="colorAccentThree">#FEBE37</color>
 
 
