--- a/app/src/main/res/layout/sign_up_page.xml
+++ b/app/src/main/res/layout/sign_up_page.xml
@@ -65,19 +65,19 @@
         android:ems="10"
         android:hint="@string/comfirm_password_string"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/submit_button_su"
+        app:layout_constraintBottom_toTopOf="@+id/start_button_timer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_text_su" />
 
     <Button
-        android:id="@+id/submit_button_su"
+        android:id="@+id/start_button_timer"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:text="@string/submit_string"
-        android:textColor="?attr/actionModeSplitBackground"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
