--- a/app/src/main/res/layout/timer_fragment.xml
+++ b/app/src/main/res/layout/timer_fragment.xml
@@ -15,16 +15,13 @@
         android:id="@+id/next_countdown_text_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="90dp"
         android:text="00:00"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryLight"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +29,7 @@
         android:id="@+id/countdown_text_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="30dp"
         android:text="00:00"
         android:textAlignment="center"
         android:textColor="@color/colorAccentOne"
@@ -61,20 +58,33 @@
         android:id="@+id/reset_button_timer"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
         android:background="@android:color/transparent"
         android:text="@string/reset_string"
         android:textColor="@color/colorAccentTwo"
         android:textSize="30sp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_button_timer"
-        app:layout_constraintVertical_bias="0.0"
         tools:text="@string/reset_string"
         tools:visibility="visible" />
+
+    <ImageButton
+        android:id="@+id/settings_button_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="false"
+        android:background="@android:color/transparent"
+        android:tint="@color/colorAccentThree"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reset_button_timer"
+        app:srcCompat="@drawable/ic_settings_black_24dp" />
+
 </android.support.constraint.ConstraintLayout>
