--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,6 @@
 <resources>
+    <!-- Please note, the NoActionBar is ESSENTIAL for the hamburger icon to work -->
+
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
