--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,52 +26,30 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_gravity="top"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorAccentThree"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+            android:background="@color/colorPrimaryDark"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
 
-            <!-- App Top Bar /MODIFY THIS TO RESIZE THE BAR ON SWIPE/ -->
-            <android.support.design.widget.AppBarLayout
-                android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginTop="56dp"
-                android:elevation="0dp"
-                android:background="@color/colorPrimaryLight"
-                android:id="@+id/appbarid">
 
-            <!--Place logo file here if we finalize design.
-            Place FILENAME.png in drawable, and change it here
-            <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:src="@drawable/FILENAME"/>
-            -->
-            </android.support.design.widget.AppBarLayout>
-
-
-        <!-- Tab Layout -->
         <android.support.design.widget.TabLayout
+            android:id="@+id/tablayout_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
             android:layout_gravity="start"
+            android:layout_marginTop="50dp"
+            android:background="@color/colorSecondaryLight"
             app:tabGravity="fill"
             app:tabMode="fixed"
-            android:id="@+id/tablayout_id"
-            android:background="@color/colorSecondaryLight"
-            app:tabTextColor="@color/colorAccentTwo"
-            app:tabSelectedTextColor="@color/colorAccentOne"/>
+            app:tabSelectedTextColor="@color/colorAccentOne"
+            app:tabTextColor="@color/colorAccentTwo" />
 
-
-        <!-- Page Viewer -->
         <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager_id"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="100dp"
-            android:id="@+id/viewpager_id"/>
+            android:layout_marginTop="100dp" />
 
     </FrameLayout> <!-- end of main content code -->
 
