--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <!-- Layout uses DrawerLayout as root. -->
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,12 +9,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <!--
-    tools:context="com.example.everb.kronicle.MainActivity"
-    android:background="@color/colorSecondary"
-    android:orientation="vertical" -->
 
-    <!-- Layout containing main body of screen -->
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
@@ -30,8 +24,6 @@
             android:layout_gravity="top"
             android:background="@color/colorPrimaryDark"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
-
-
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout_id"
@@ -50,12 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="100dp" />
+    </FrameLayout>
 
-    </FrameLayout> <!-- end of main content code -->
-
-
-
-    <!-- Container for drawer/sidemenu contents -->
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_height="match_parent"
@@ -64,6 +52,4 @@
         android:fitsSystemWindows="true"
         app:menu="@menu/drawer_view"
         app:headerLayout="@layout/nav_header"/>
-
-
 </android.support.v4.widget.DrawerLayout>
