--- a/app/src/main/res/layout/notes_fragment.xml
+++ b/app/src/main/res/layout/notes_fragment.xml
@@ -16,4 +16,10 @@
         android:textSize="20sp"
         />
 
+    <Button
+        android:id="@+id/button_NF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name" />
+
 </LinearLayout>
