--- a/app/src/main/res/layout/timer_fragment.xml
+++ b/app/src/main/res/layout/timer_fragment.xml
@@ -46,13 +46,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
         android:background="@android:color/transparent"
-        android:text="@string/start_string"
+        android:text="@string/start"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/countdown_text_timer"
-        tools:text="@string/start_string" />
+        tools:text="@string/start" />
 
     <Button
         android:id="@+id/reset_button_timer"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@android:color/transparent"
-        android:text="@string/reset_string"
+        android:text="@string/reset"
         android:textColor="@color/colorAccentTwo"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -69,7 +69,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_button_timer"
-        tools:text="@string/reset_string"
+        tools:text="@string/reset"
         tools:visibility="visible" />
 
     <ImageButton
