--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -8,7 +8,7 @@
         <item
             android:id="@+id/myaccount"
             android:icon="@drawable/ic_person_black_24dp"
-            android:title="@string/myacc" />
+            android:title="@string/my_account" />
         <item
             android:id="@+id/settings"
             android:icon="@drawable/ic_settings_black_24dp"
