--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,6 +16,6 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/app_name"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/k_image" />
+        app:srcCompat="@drawable/k_image_layered" />
 
 </LinearLayout>
