--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/home"
+            android:id="@+id/home_drawer"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/home" />
         <item
-            android:id="@+id/myaccount"
+            android:id="@+id/my_account_drawer"
             android:icon="@drawable/ic_person_black_24dp"
             android:title="@string/my_account" />
         <item
-            android:id="@+id/settings"
+            android:id="@+id/settings_drawer"
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/settings" />
         <item
-            android:id="@+id/info"
+            android:id="@+id/about_drawer"
             android:icon="@drawable/ic_info_black_24dp"
             android:title="@string/about" />
     </group>
