--- a/app/src/main/res/layout/my_account.xml
+++ b/app/src/main/res/layout/my_account.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.everb.kronicle.MyAccountPage">
+    tools:context="com.example.everb.kronicle.MyAccount">
 
 </android.support.constraint.ConstraintLayout>
