--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="130dp"
         android:background="@android:color/transparent"
-        android:contentDescription="@string/app_name"
+        android:contentDescription="@string/kronicle"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/k_layered" />
 
