--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.everb.kronicle.SignUpPage"
+    tools:context="com.example.everb.kronicle.SignUp"
     tools:layout_editor_absoluteY="25dp">
 
     <ImageView
