--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="90dp"
         android:text="00:00"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryLight"
+        android:textColor="@color/colorComplement"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -32,7 +32,7 @@
         android:layout_marginTop="30dp"
         android:text="00:00"
         android:textAlignment="center"
-        android:textColor="@color/colorAccentOne"
+        android:textColor="@color/colorHelperOne"
         android:textSize="90sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,7 +47,7 @@
         android:layout_marginTop="90dp"
         android:background="@android:color/transparent"
         android:text="@string/start"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorBase"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:text="@string/reset"
-        android:textColor="@color/colorAccentTwo"
+        android:textColor="@color/colorHelperTwo"
         android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
