--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -4,70 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context="com.example.everb.kronicle.LandingPage"
     tools:layout_editor_absoluteY="25dp">
-
-    <!-- SIGN IN BUTTON -->
 
     <ImageView
         android:id="@+id/image_ip"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="128dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_in_button_ip"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kronicle_layered_small" />
+        app:srcCompat="@drawable/kronicle" />
 
     <Button
         android:id="@+id/sign_in_button_ip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="2dp"
+        android:elevation="10dp"
+        android:background="@drawable/button_shape"
+        android:foreground="@drawable/ripple_effect"
+        android:fontFamily="@font/lato"
         android:text="@string/sign_in"
-        android:background="@android:color/transparent"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/sign_up_button_ip"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_ip" />
-
-    <!-- SIGN UP BUTTON -->
-    <Button
-        android:id="@+id/sign_up_button_ip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:text="@string/sign_up"
-        android:textColor="@color/colorAccentOne"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textAlignment="center"
+        android:textColor="@color/colorBase"
+        android:textSize="18sp"
+        android:typeface="sans"
+        app:layout_constraintBottom_toTopOf="@+id/sign_up_button_ip"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/sign_in_button_ip"
-        app:layout_constraintTop_toBottomOf="@+id/image_ip" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_ip"
+        tools:text="@string/sign_in" />
 
-    <!-- GUEST BUTTON -->
+    <Button
+        android:id="@+id/sign_up_button_ip"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/button_shape"
+        android:elevation="10dp"
+        android:fontFamily="@font/lato"
+        android:foreground="@drawable/ripple_effect"
+        android:text="@string/sign_up"
+        android:textColor="@color/colorComplement"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/guest_sign_in_button_ip"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_button_ip" />
+
     <Button
         android:id="@+id/guest_sign_in_button_ip"
         android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="2dp"
         android:background="@android:color/transparent"
+        android:fontFamily="@font/lato"
         android:text="@string/continue_guest"
-        android:textColor="@color/colorAccentThree"
-        android:textSize="30sp"
+        android:textAllCaps="false"
+        android:textColor="@color/colorHelperOne"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_ip"
-        app:layout_constraintVertical_bias="0.882" />
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_button_ip" />
 
 </android.support.constraint.ConstraintLayout>
