--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -9,42 +9,43 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Toolbar with Hamburger Icon -->
+        <!-- Toolbar -->
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="top"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorBase"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
         <!-- Tab Menu -->
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager_id"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="100dp" />
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_marginTop="50dp"
-            android:background="@color/colorSecondaryLight"
+            android:background="@color/colorLight"
+            android:elevation="10dp"
             app:tabGravity="fill"
             app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/colorAccentOne"
-            app:tabTextColor="@color/colorAccentTwo" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager_id"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="100dp" />
+            app:tabSelectedTextColor="@color/colorHelperOne"
+            app:tabTextColor="@color/colorBase" />
     </FrameLayout>
 
+    <!-- Side Menu -->
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
