--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    android:background="?attr/colorPrimaryDark"
+    android:background="@color/colorBase"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
@@ -12,10 +12,10 @@
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="wrap_content"
-        android:layout_height="130dp"
+        android:layout_height="125dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/kronicle"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/k_layered" />
+        app:srcCompat="@drawable/k" />
 
 </LinearLayout>
