--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,19 +3,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/home_drawer"
-            android:icon="@drawable/ic_home_black_24dp"
+            android:icon="@drawable/icon_home"
             android:title="@string/home" />
         <item
             android:id="@+id/my_account_drawer"
-            android:icon="@drawable/ic_person_black_24dp"
+            android:icon="@drawable/icon_person"
             android:title="@string/my_account" />
         <item
             android:id="@+id/settings_drawer"
-            android:icon="@drawable/ic_settings_black_24dp"
+            android:icon="@drawable/icon_settings"
             android:title="@string/settings" />
         <item
             android:id="@+id/about_drawer"
-            android:icon="@drawable/ic_info_black_24dp"
+            android:icon="@drawable/icon_info"
             android:title="@string/about" />
     </group>
 </menu>
