--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,12 @@
 <resources>
     <!-- Main App Theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccentOne</item>
-        <item name="titleTextColor">@color/colorSecondaryLight</item>
+        <item name="colorPrimary">@color/colorBase</item>
+        <item name="colorPrimaryDark">@color/colorBase</item>
+        <item name="colorAccent">@color/colorHelperOne</item>
+        <item name="titleTextColor">@color/colorLight</item>
+        <item name="android:navigationBarColor">@color/colorBase</item>
+
     </style>
 
     <!-- Splash Screen Theme -->
