--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -22,7 +22,15 @@
             android:layout_height="50dp"
             android:layout_gravity="top"
             android:background="@color/colorBase"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+            <ImageView
+                android:id="@+id/logo_ma"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/k_simple" />
+
+        </android.support.v7.widget.Toolbar>
 
         <!-- Tab Menu -->
         <android.support.v4.view.ViewPager
