--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <color name="colorBase">#001E53</color>
-    <color name="colorComplement">#00E6BC</color>
+    <color name="colorComplement">#00e6bc</color>
 
     <color name="colorLight">#FFFFFF</color>
     <color name="colorDark">#F5F6FB</color>
