app now closes when back button is pressed twice
added code for fab bar animation

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorBase</item>
         <item name="colorPrimaryDark">@color/colorBase</item>
         <item name="colorAccent">@color/colorHelperOne</item>
-        <item name="titleTextColor">@color/colorLight</item>
+        <item name="titleTextColor">@color/colorBase</item>
     </style>
 
     <!-- Splash Screen Theme -->
