Complete fix to menu nav bar
- Proper linking to from and to all Major Activities
- Modified OnResume() to all activities to fix menu bug
- Added ToolBar to all appropriate pages.

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -28,7 +28,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/k_simple" />
+                android:src="@drawable/k" />
 
         </android.support.v7.widget.Toolbar>
 
