--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -23,20 +23,20 @@
         android:layout_width="250dp"
         android:layout_height="46dp"
         android:ems="10"
-        android:hint="@string/name"
+        android:hint="@string/username"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/last_name_text_su"
+        app:layout_constraintBottom_toTopOf="@+id/birth_date_su"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_su" />
 
     <EditText
-        android:id="@+id/last_name_text_su"
+        android:id="@+id/birth_date_su"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/last_name"
+        android:hint="@string/birth_date"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/email_text_su"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/last_name_text_su" />
+        app:layout_constraintTop_toBottomOf="@+id/birth_date_su" />
 
     <EditText
         android:id="@+id/password_text_su"
@@ -96,7 +96,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_comfirm_text_su"
-        tools:text="@string/sign_up" />
+        tools:text="@string/sign_up"
+        android:onClick="btnSignUpClick"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
