--- a/app/src/main/res/layout/my_account.xml
+++ b/app/src/main/res/layout/my_account.xml
@@ -29,18 +29,38 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/k" />
+                android:text="@drawable/k" />
 
         </android.support.v7.widget.Toolbar>
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_marginTop="50dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:text="My Account" />
+            android:id="@+id/titleViewAccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View Account"
+            android:layout_marginTop="60dp"
+            android:layout_marginStart="10dp"/>
+
+        <Button
+            android:layout_marginTop="60dp"
+            android:layout_marginStart="200dp"
+            android:id="@+id/btnUpdate"
+            android:text="Update"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:onClick="btnRefreshClick"/>
+
+        <ScrollView
+            android:id="@+id/scrollResults"
+            android:layout_width="360dp"
+            android:layout_height="460dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="10dp">
+            <TextView
+                android:id="@+id/lblResults"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </ScrollView>
     </FrameLayout>
 
     <!-- Side Menu -->
