Cleaned up Project Removed FAB Edited Text

--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -3,16 +3,7 @@
 <!-- MODIFY THIS TO CHANGE OUR SPLASH SCREEN -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
-        <shape>
-            <gradient
-                android:angle="135"
-                android:startColor="@color/colorBase"
-                android:endColor="@color/colorComplement"
-                android:type="linear"
-                />
-        </shape>
-    </item>
+    <item android:drawable="@color/colorBase" />
 
     <item
         android:drawable="@drawable/k"
