--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="30dp"
         android:text="00:00"
         android:textAlignment="center"
-        android:textColor="@color/colorHelperOne"
+        android:textColor="@color/colorComplement"
         android:textSize="90sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -61,7 +61,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:text="@string/reset"
-        android:textColor="@color/colorHelperTwo"
+        android:textColor="@color/colorComplement"
         android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
