--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -23,11 +23,13 @@
             android:layout_gravity="top"
             android:background="@color/colorBase"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
             <ImageView
                 android:id="@+id/logo"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
+                android:contentDescription="@string/kronicle"
                 android:src="@drawable/k" />
 
         </android.support.v7.widget.Toolbar>
@@ -49,46 +51,8 @@
             android:elevation="10dp"
             app:tabGravity="fill"
             app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/colorHelperOne"
+            app:tabSelectedTextColor="@color/colorComplement"
             app:tabTextColor="@color/colorBase" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_notes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="166dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="invisible"
-            app:srcCompat="@drawable/icon_notes" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_habits"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="66dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="invisible"
-            app:srcCompat="@drawable/icon_habits" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="10dp"
-            app:srcCompat="@drawable/icon_add" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_timer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="116dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="invisible"
-            app:srcCompat="@drawable/icon_timer" />
     </FrameLayout>
 
     <!-- Side Menu -->
