--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="colorPrimary">@color/colorBase</item>
         <item name="colorPrimaryDark">@color/colorBase</item>
-        <item name="colorAccent">@color/colorHelperOne</item>
+        <item name="colorAccent">@color/colorComplement</item>
         <item name="titleTextColor">@color/colorBase</item>
     </style>
 
